--- a/02.pod.yaml
+++ b/02.pod.yaml
@@ -18,4 +18,36 @@ spec:
   - name: nginx
     image: nginx
 
-    
+# [ ec2-user@ip-172-31-88-91 ~/01.k8-resources ]$ kubectl apply -f 02.pod.yaml
+# pod/nginx created
+ 
+# [ ec2-user@ip-172-31-88-91 ~/01.k8-resources ]$ kubectl get pods
+# NAME    READY   STATUS    RESTARTS   AGE
+# nginx   1/1     Running   0          12s
+
+# [ ec2-user@ip-172-31-88-91 ~/01.k8-resources ]$ kubectl exec -it nginx -- bash
+# root@nginx:/# curl localhost
+# <!DOCTYPE html>
+# <html>
+# <head>
+# <title>Welcome to nginx!</title>
+# <style>
+# html { color-scheme: light dark; }
+# body { width: 35em; margin: 0 auto;
+# font-family: Tahoma, Verdana, Arial, sans-serif; }
+# </style>
+# </head>
+# <body>
+# <h1>Welcome to nginx!</h1>
+# <p>If you see this page, the nginx web server is successfully installed and
+# working. Further configuration is required.</p>
+
+# <p>For online documentation and support please refer to
+# <a href="http://nginx.org/">nginx.org</a>.<br/>
+# Commercial support is available at
+# <a href="http://nginx.com/">nginx.com</a>.</p>
+
+# <p><em>Thank you for using nginx.</em></p>
+# </body>
+# </html>
+# root@nginx:/#
