--- a/02.pod.yaml
+++ b/02.pod.yaml
@@ -1,14 +1,3 @@
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: nginx
-# spec:
-#   containers:
-#   - name: nginx
-#     image: nginx
-  
-  #docker run -d --name nginx nginx
-
 apiVersion: v1 
 kind: Pod
 metadata:
@@ -18,14 +7,22 @@ spec:
   - name: nginx
     image: nginx
 
-# [ ec2-user@ip-172-31-88-91 ~/01.k8-resources ]$ kubectl apply -f 02.pod.yaml
-# pod/nginx created
- 
-# [ ec2-user@ip-172-31-88-91 ~/01.k8-resources ]$ kubectl get pods
-# NAME    READY   STATUS    RESTARTS   AGE
-# nginx   1/1     Running   0          12s
 
-# [ ec2-user@ip-172-31-88-91 ~/01.k8-resources ]$ kubectl exec -it nginx -- bash
+
+#docker run -d --name nginx nginx
+
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 02.pod.yaml
+# pod/nginx created
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get pods
+# NAME    READY   STATUS    RESTARTS   AGE
+# nginx   1/1     Running   0          10s
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl exec -it nginx -- bash
 # root@nginx:/# curl localhost
 # <!DOCTYPE html>
 # <html>
