--- a/03-multi-container.yaml
+++ b/03-multi-container.yaml
@@ -7,5 +7,5 @@ spec:
   - name: nginx
     image: nginx
   - name: almalinux
-    image: almalinx:9
+    image: almalinux:9
     command: ["sleep","100"]  
