--- a/08-config-map.yaml
+++ b/08-config-map.yaml
@@ -6,6 +6,9 @@ data:
   company: dbs
   location: "changi"
 
+
+
+
 # https://kubernetes.io/docs/concepts/configuration/configmap/
 
 # apiVersion: v1
@@ -15,3 +18,38 @@ data:
 # data:
 #   course: devops
 #   duration: "120hrs"
+
+
+
+
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 08-config-map.yaml
+# configmap/nginx-config created
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get configmap
+# NAME               DATA   AGE
+# kube-root-ca.crt   1      47m
+# nginx-config       2      18s
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl describe configmap nginx-config
+# Name:         nginx-config
+# Namespace:    default
+# Labels:       <none>
+# Annotations:  <none>
+
+# Data
+# ====
+# company:
+# ----
+# dbs
+# location:
+# ----
+# changi
+
+# BinaryData
+# ====
+
+# Events:  <none>
