--- a/09-pod-config.yaml
+++ b/09-pod-config.yaml
@@ -20,3 +20,49 @@ spec:
     #       configMapKeyRef:
     #         name: nginx-config
     #         key: duration
+
+
+
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 09-pod-config.yaml
+# pod/pod-config created
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get pods
+# NAME              READY   STATUS    RESTARTS        AGE
+# annotations       1/1     Running   0               13m
+# environment       1/1     Running   0               10m
+# labels            1/1     Running   0               16m
+# limits            1/1     Running   0               8m12s
+# multi-container   2/2     Running   1 (5m54s ago)   22m
+# nginx             1/1     Running   0               35m
+# pod-config        1/1     Running   0               14s
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl exec -it pod-config -- bash
+
+# root@pod-config:/# env
+# KUBERNETES_SERVICE_PORT_HTTPS=443
+# KUBERNETES_SERVICE_PORT=443
+# HOSTNAME=pod-config
+# PWD=/
+# PKG_RELEASE=1~bookworm
+# HOME=/root
+# KUBERNETES_PORT_443_TCP=tcp://10.100.0.1:443
+# DYNPKG_RELEASE=1~bookworm
+# NJS_VERSION=0.8.7
+# TERM=xterm
+# company=dbs
+# SHLVL=1
+# location=changi
+# KUBERNETES_PORT_443_TCP_PROTO=tcp
+# KUBERNETES_PORT_443_TCP_ADDR=10.100.0.1
+# KUBERNETES_SERVICE_HOST=10.100.0.1
+# KUBERNETES_PORT=tcp://10.100.0.1:443
+# KUBERNETES_PORT_443_TCP_PORT=443
+# PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# NGINX_VERSION=1.27.3
+# NJS_RELEASE=1~bookworm
+# _=/usr/bin/env
+# root@pod-config:/#
