--- a/10-secret.yaml
+++ b/10-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: pod-secret
 type: Opaque  
 data:
-  username: 
-  password: 
+  username: c3VwcmFqYQo=
+  password: cGFzc3dvcmQxMjMK
