--- a/10-secret.yaml
+++ b/10-secret.yaml
@@ -6,3 +6,30 @@ type: Opaque
 data:
   username: c3VwcmFqYQo=
   password: cGFzc3dvcmQxMjMK
+
+
+
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 10-secret.yaml
+# secret/pod-secret configured
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get secrets
+# NAME         TYPE     DATA   AGE
+# pod-secret   Opaque   2      3m10s
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl describe secret pod-secret
+# Name:         pod-secret
+# Namespace:    default
+# Labels:       <none>
+# Annotations:  <none>
+
+# Type:  Opaque
+
+# Data
+# ====
+# password:  12 bytes
+# username:  8 bytes
+
