--- a/10-secret.yaml
+++ b/10-secret.yaml
@@ -33,3 +33,11 @@ data:
 # password:  12 bytes
 # username:  8 bytes
 
+#encode and decode secrets easy 
+# supra@supraja MINGW64 
+# $ echo "supraja" | base64
+# c3VwcmFqYQo=
+
+# supra@supraja MINGW64  
+# $ echo "c3VwcmFqYQo=" | base64 --decode
+# supraja
