--- a/11-pod-secret.yaml
+++ b/11-pod-secret.yaml
@@ -9,3 +9,48 @@ spec:
     envFrom:
     - secretRef:
         name: pod-secret
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 11-pod-secret.yaml
+# pod/pod-secret created
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get pods
+# NAME              READY   STATUS    RESTARTS      AGE
+# annotations       1/1     Running   0             53m
+# environment       1/1     Running   0             50m
+# labels            1/1     Running   0             56m
+# limits            1/1     Running   0             48m
+# multi-container   2/2     Running   3 (12m ago)   62m
+# nginx             1/1     Running   0             75m
+# pod-config        1/1     Running   0             10m
+# pod-secret        1/1     Running   0             3s
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl exec -it pod-secret -- bash
+# root@pod-secret:/# env
+# KUBERNETES_SERVICE_PORT_HTTPS=443
+# KUBERNETES_SERVICE_PORT=443
+# HOSTNAME=pod-secret
+# PWD=/
+# PKG_RELEASE=1~bookworm
+# HOME=/root
+# KUBERNETES_PORT_443_TCP=tcp://10.100.0.1:443
+# DYNPKG_RELEASE=1~bookworm
+# NJS_VERSION=0.8.7
+# TERM=xterm
+# username=supraja
+
+# SHLVL=1
+# KUBERNETES_PORT_443_TCP_PROTO=tcp
+# KUBERNETES_PORT_443_TCP_ADDR=10.100.0.1
+# password=password123
+
+# KUBERNETES_SERVICE_HOST=10.100.0.1
+# KUBERNETES_PORT=tcp://10.100.0.1:443
+# KUBERNETES_PORT_443_TCP_PORT=443
+# PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# NGINX_VERSION=1.27.3
+# NJS_RELEASE=1~bookworm
+# _=/usr/bin/env
+# root@pod-secret:/#
