--- a/13-node-part.yaml
+++ b/13-node-part.yaml
@@ -13,3 +13,27 @@ spec:
     protocol: TCP
     port: 80 # service port
     targetPort: 80 # container port
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 13-node-part.yaml
+# service/nginx-np created
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get services
+# NAME         TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)        AGE
+# kubernetes   ClusterIP   10.100.0.1      <none>        443/TCP        133m
+# nginx        ClusterIP   10.100.246.57   <none>        80/TCP         9m8s
+# nginx-np     NodePort    10.100.133.41   <none>        80:31610/TCP   14s
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get pods -o wide
+# NAME              READY   STATUS    RESTARTS        AGE    IP               NODE                             NOMINATED NODE   READINESS GATES
+# annotations       1/1     Running   0               100m   192.168.49.95    ip-192-168-48-125.ec2.internal   <none>           <none>
+# environment       1/1     Running   0               97m    192.168.20.54    ip-192-168-28-237.ec2.internal   <none>           <none>
+# labels            1/1     Running   0               103m   192.168.16.225   ip-192-168-28-237.ec2.internal   <none>           <none>
+# limits            1/1     Running   0               95m    192.168.26.152   ip-192-168-8-254.ec2.internal    <none>           <none>
+# multi-container   2/2     Running   6 (9m33s ago)   109m   192.168.43.2     ip-192-168-48-125.ec2.internal   <none>           <none>
+# nginx             1/1     Running   0               122m   192.168.22.37    ip-192-168-28-237.ec2.internal   <none>           <none>
+# pod-config        1/1     Running   0               57m    192.168.55.23    ip-192-168-48-125.ec2.internal   <none>           <none>
+# pod-secret        1/1     Running   0               47m    192.168.11.100   ip-192-168-28-237.ec2.internal   <none>           <none>
+
