--- a/12-service_clusterIP.yaml
+++ b/12-service_clusterIP.yaml
@@ -14,7 +14,7 @@ spec:
     targetPort: 80 # container port
 
 #     54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
-# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 12-service.yaml
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 12-servic
 # service/nginx created
 
 # 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
