--- a/14-load-balancer.yaml
+++ b/14-load-balancer.yaml
@@ -13,3 +13,17 @@ spec:
     protocol: TCP
     port: 80 # service port
     targetPort: 80 # container port
+
+
+#     54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl apply -f 14-load-balancer.yaml
+# service/nginx-lb created
+
+# 54.152.103.126 | 172.31.88.42 | t3.micro | https://github.com/suprajaspace/01.k8-resources.git
+# [ ec2-user@ip-172-31-88-42 ~/01.k8-resources ]$ kubectl get services
+# NAME         TYPE           CLUSTER-IP      EXTERNAL-IP                                                               PORT(S)        AGE
+# kubernetes   ClusterIP      10.100.0.1      <none>                                                                    443/TCP        178m
+# nginx        ClusterIP      10.100.246.57   <none>                                                                    80/TCP         53m
+# nginx-lb     LoadBalancer   10.100.15.168   ae8b3a492b465468facf84c12a36a191-2058921208.us-east-1.elb.amazonaws.com   80:31433/TCP   40s
+# nginx-np     NodePort       10.100.133.41   <none>                                                                    80:31610/TCP   44m
+
