--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -23,7 +23,8 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:stable-perl
+        # image: nginx:stable-perl
+        image: nginx
 ---
 kind: Service
 apiVersion: v1
